text spacing fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,8 +9,7 @@ html {
 
 h1,
 h2,
-h3,
-h4 {
+h3 {
   font-weight: 900;
   /* Montserrat Black */
 }
